<resources>
    <string name="txtLogin">تایید شماره همراه </string>
    <string name="expand">تفکیک زباله در خانه کار سختی نیست... </string>
    <string name="scoreofvideo">امتیاز ویدیو:</string>
    <string name="seen">دیده شده</string>
    <string name="sharp">#</string>
    <string name="namewaste">نام پسماند</string>
    <string name="count">تعداد</string>
    <string name="sell">خرید</string>
    <string name="learn">آموزش</string>
    <string name="learn1">نکات و دانستنی های آموزشی</string>
    <string name="appname">سامانه هوشمند اکو</string>
    <string name="loginstring">تمامی حق و حقوق برای اکو محفوظ است</string>
    <string name="verificationHeader">تایید شماره همراه</string>
    <string name="AcceptPhoneHeader">لطفا شماره همراه خود را تایید نمایید</string>
    <string name="sendCode">ارسال کد تایید</string>
    <string name="wallet">کیف پول</string>
    <string name="despositAcc">واریز به حساب</string>
    <string name="settingsAcc">حساب کاربری</string>
    <string name="nextStep">مرحله بعد</string>
    <string name="mylocation">برو به مکان من</string>
    <string name="selectdate">انتخاب تاریخ</string>
    <string name="selecttime">انتخاب زمان</string>
    <string name="Verifycodeverification">بررسی صحت کد</string>
    <string name="nameaddress">نام این آدرس :</string>
    <string name="reset">بازنشانی</string>
    <string name="xchanges">تبادلات</string>
    <string name="detailsxchanges">جزئیات تبادلات صورت گرفته</string>
    <string name="Authenticationcode">کد احراز هویت</string>
    <string name="submitApplication">ثبت درخواست</string>
    <string name="wastesRegistered">پسماندهای ثبت شده</string>
    <string name="timerLeft">زمان باقی مانده تا جمع آوری</string>
    <string name="Store">فروشگاه</string>
    <string name="addaddress">اضافه کردن این آدرس</string>
    <string name="dexcadd">توضیحات آدرس جهت مسیریابی :</string>
    <string name="Specifiedselectedaddress">مشخصات آدرس منتخب</string>
    <string name="EcoSamane">سامانه هوشمند اکو</string>
    <string name="rightOfOwnership">تمام حق این سامانه متعلق به شرکت توسعه هوشمند پایدار می باشد</string>

    <string name="app_name">Eco</string>
    <string name="verifyCode">بررسی صحت کد</string>
    <string name="numberPackage">وزن تقریبی</string>
    <string name="package1">کیلوگرم</string>
    <string name="shop">فروشگاه</string>
    <string name="home">خانه</string>
    <string name="xChange">لیست تبادلات</string>
    <string name="eco">سامانه هوشمند اکو</string>
    <string name="myLocation">برو به مکان من</string>
    <string name="profile">پروفایل</string>
    <string name="introduce">معرفی به دوستان</string>
    <string name="about_us">درباره ما</string>
    <string name="aboutUs">با به کارگیری سامانه هوشمند eco، شما می توانید به راحتی درخواست جمع آوری پسماند های خشک خود را از درب منزل یا محل کار خود ثبت نمایید و در بازه زمانی دلخواه خودتان منتظر نیروهای جمع آوری باشید.
برای استفاده از eco لازم است نوع پسماند خشک مورد نظر را در صفحه ی اول مشخص نمایید و پس از ورود آدرس و تعیین زمان مورد نظر از این سرویس استفاده نمایید. پس از مراجعه نیروهای جمع آوری و دریافت پسماند از شما امتیاز کسب شده در حساب کاربری شما ذخیره می شود و شما           می‌توانید از طریق باشگاه مشتریان امتیازات خود را هزینه نمایید.
با استفاده از این سامانه علاوه بر ایجاد ارزش افزوده مادی می‌توانید به حفاظت محیط زیست و ارتقا سطح کیفی آن کمک به سزایی نمایید و در سود معنوی آن نیز شریک شوید.</string>
    <string name="call">تماس با ما</string>
    <string name="exit">خروج</string>
    <string name="more">بیشتر</string>
    <string name="setting">تنظیمات</string>
    <string name="confirm"
        >تایید</string>
    <string name="walletFragment">درآمد خود را تسویه حساب نمایید</string>
    <string name="grade">امتیاز</string>
    <string name="register">ثبت نام</string>
    <string name="shabanumber">شماره شبا</string>
    <string name="save">ذخیره</string>
    <string name="edit">ویرایش</string>
    <string name="email">ایمیل</string>
    <string name="address">آدرس</string>
    <string name="Introduction">معرفی</string>
    <string name="phoneumber">َشماره موبایل</string>
    <string name="friendIntroduction">اپلیکیشن را به دوستان خود معرفی کنید</string>
    <string name="edituser">ویرایش اطلاعات کاربری</string>
    <string name="namefamily">نام و نام خانوادگی</string>
    <string name="male">آقا</string>
    <string name="female">خانم</string>
    <string name="score">امتیاز</string>
</resources>
