<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.09245742" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.91" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <com.eco.CoustomTextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Introduction"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/fili2"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        app:layout_constraintTop_toTopOf="@+id/guideline41" />

    <com.eco.CoustomTextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:textSize="@dimen/_10ssp"
        android:layout_marginEnd="8dp"
        android:text="@string/friendIntroduction"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />


    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/custom_button_send"
        android:text="ارسال"
        android:textColor="@color/white"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintBottom_toTopOf="@+id/guideline46"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        app:layout_constraintStart_toStartOf="@+id/guideline29"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <com.eco.CoustomTextView
        android:layout_marginBottom="5dp"
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namefamily"
        android:textColor="#0097a7"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        app:layout_constraintTop_toTopOf="@+id/guideline48" />


    <com.eco.CoustomEditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:textSize="@dimen/_12ssp"
        android:padding="@dimen/_3sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/custom_shaba_edit_text_gray"
        android:inputType="text"
        android:textColor="@color/yellow_800"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        app:layout_constraintStart_toStartOf="@+id/guideline29"
        app:layout_constraintTop_toBottomOf="@+id/guideline51" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <com.eco.CoustomTextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/phoneumber"
        android:textColor="#0097a7"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />


    <com.eco.CoustomEditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:padding="@dimen/_3sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/_12ssp"
        android:background="@drawable/custom_shaba_edit_text_gray"
        android:inputType="phone"
        android:textColor="@color/yellow_800"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        app:layout_constraintStart_toStartOf="@+id/guideline29"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/guideline40"
        app:layout_constraintStart_toStartOf="@+id/guideline29"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>